samples/_failures_safe/1761349900_104555_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9eae26e5.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_9eae26e5.c:175:16: error: missing terminating " character
  175 |         printf("First 16
      |                ^~~~~~~~~
./samples/SAFE/__tmp_9eae26e5.c:175:9: error: expected expression at end of input
  175 |         printf("First 16
      |         ^~~~~~
./samples/SAFE/__tmp_9eae26e5.c:175:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9eae26e5.c:175:9: error: expected declaration or statement at end of input
